<resources>
    <string name="app_name">Hello</string>
    <string name="pack1">Pack1</string>
    <string name="pack2">Pack2</string>
    <string name="pack3">Pack3</string>
    <string name="pack4">Pack4</string>
    <string name="pack5">Pack5</string>
    <string name="DEFAULT">default</string>
    <string name="no">99</string>
    <string name="inputname">请输入姓名</string>
    <string name="inputnum">请输入学号</string>
    <string name="inputphone">请输入手机号</string>
    <string name="name">姓名</string>
    <string name="num">学号</string>
    <string name="phone">手机号</string>
    <string name="remarks">备注</string>
    <string name="question">一天，张三的店里来了一个顾客，挑了25元的货，顾客拿出100元假币，张三没有零钱找不开，就到隔壁李四的店里把这100元换成零钱，回来给顾客找了75元钱，过了一会儿，李四来找张三，说刚才的100元是假币，张三马上给李四换了张真钱，问张三赔了多少钱？</string>
    <string name="answerA">A:100</string>
    <string name="answerB">B:125</string>
    <string name="answerC">C:175</string>
    <string name="answerD">D:200</string>
    <string name="commit">提交</string>
    <string name="resolution"><u>查看解析</u></string>
    <string name="DataPicker">日期选择器</string>
    <string name="TimePicker">时间选择器</string>
    <string name="Chronometer">计时器</string>
    <string name="startTime">开始计时</string>
    <string name="stopTime">停止计时</string>
    <string name="transparency">透明度</string>
    <string name="age">年龄</string>
    <string name="send">Send</string>
    <string name="add">添加</string>
    <string name="remove">删除</string>
    <string name="destroy">销毁</string>
    <string name="jump_to_java">Jump to Java</string>
    <string name="jumpinternetexplore">Internet Explore</string>
    <string name="telphone">Telphone</string>
    <string name="back">后退</string>
    <string name="menu">菜单</string>
    <string name="longteststring">26666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666</string>
    <string name="change">Change</string>
    <string name="send_broadcast">Send Broadcast</string>
</resources>