<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector1"
                android:button="@null"
                android:padding="8dp"
                android:text="@string/answerA" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector1"
                android:button="@null"
                android:padding="8dp"
                android:text="@string/answerB" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector1"
                android:button="@null"
                android:padding="8dp"
                android:text="@string/answerC" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector1"
                android:button="@null"
                android:padding="8dp"
                android:text="@string/answerD" />
        </RadioGroup>

        <Button
            android:id="@+id/commit"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/commit" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/resolution"
            android:textColor="@color/colorRed" />
    </LinearLayout>
</ScrollView>