<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorAccent"
    android:padding="5dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".pack1.UICostomActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/DEFAULT"
        android:textSize="28sp" />

    <Button
        android:id="@+id/menu"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/menu"
        android:textAllCaps="false" />

</LinearLayout>