<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="0dp" />

    <Button
        android:id="@+id/sent"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/send"
        android:textAllCaps="false" />

</LinearLayout>