<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pack1.TimeActivity"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <CheckBox
            android:id="@+id/dp_cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DataPicker"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/dp_cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimePicker"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/dp_cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chronometer"
            android:textSize="20sp" />

        <DatePicker
            android:id="@+id/dp_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/dp_tv1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:text="@string/DEFAULT"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="gone"/>
        <TimePicker
            android:id="@+id/dp_tp1"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/dp_tv2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:text="@string/DEFAULT"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="gone"/>
        <Chronometer
            android:id="@+id/dp_cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format="已用时间：\n %s"
            android:background="@drawable/background"
            android:gravity="center"
            android:textSize="25sp"
            android:paddingTop="25dp"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/settime1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:hint="min"
                android:background="@drawable/shape1"
                android:inputType="number"
                android:visibility="gone"
                android:layout_weight="1"/>
            <View
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:background="#00000000"/>
            <EditText
                android:id="@+id/settime2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:hint="seconds"
                android:background="@drawable/shape1"
                android:inputType="number"
                android:visibility="gone"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dp_start"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/startTime"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_marginEnd="8dp"/>/>
            <Button
                android:id="@+id/dp_stop"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/stopTime"
                android:layout_weight="1"
                android:visibility="gone"/>
        </LinearLayout>



    </LinearLayout>

</ScrollView>